Update swagger for question service
